<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jmeter.plugins.websocket.sampler</groupId>
    <artifactId>jmeter-bzm-websocket-mqtt</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0</version>
    <name>WebSocket Sampler as JMeter plugin</name>

    <properties>
        <version.org.apache.jmeter.all>3.0</version.org.apache.jmeter.all>
<!--         <version.org.apache.jmeter.all>2.13</version.org.apache.jmeter.all> -->
		<version.org.eclipse.jetty.all>9.4.2.v20170220</version.org.eclipse.jetty.all>
    </properties>

    <dependencies>
    
<!--     	TO BUILD 2.13 -->
<!--     	<dependency> -->
<!-- 		    <groupId>org.apache.commons</groupId> -->
<!-- 		    <artifactId>commons-math3</artifactId> -->
<!-- 		    <version>3.4.1</version> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 		    <groupId>org.apache.commons</groupId> -->
<!-- 		    <artifactId>commons-pool2</artifactId> -->
<!-- 		    <version>2.3</version> -->
<!-- 		</dependency> -->

        <dependency>
            <groupId>org.apache.jmeter</groupId>
            <artifactId>ApacheJMeter_core</artifactId>
            <version>${version.org.apache.jmeter.all}</version>
            <scope>provided</scope>
<!--             TO BUILD 2.13 -->
<!--             <exclusions> -->
<!-- 				<exclusion> -->
<!-- 				  <artifactId>commons-math3</artifactId> -->
<!-- 				  <groupId>commons-math3</groupId> -->
<!-- 				</exclusion> -->
<!-- 				<exclusion> -->
<!-- 				  <artifactId>commons-pool2</artifactId> -->
<!-- 				  <groupId>commons-pool2</groupId> -->
<!-- 				</exclusion> -->
<!-- 			</exclusions> -->
        </dependency>

        <dependency>
            <groupId>org.apache.jmeter</groupId>
            <artifactId>ApacheJMeter_http</artifactId>
            <version>${version.org.apache.jmeter.all}</version>
            <scope>provided</scope>
<!--              TO BUILD 2.13 -->
<!--             <exclusions> -->
<!-- 				<exclusion> -->
<!-- 				  <artifactId>commons-math3</artifactId> -->
<!-- 				  <groupId>commons-math3</groupId> -->
<!-- 				</exclusion> -->
<!-- 				<exclusion> -->
<!-- 				  <artifactId>commons-pool2</artifactId> -->
<!-- 				  <groupId>commons-pool2</groupId> -->
<!-- 				</exclusion> -->
<!-- 			</exclusions> -->
        </dependency>
        
        <dependency>
	   		<groupId>org.eclipse.jetty.websocket</groupId>
		    <artifactId>websocket-client</artifactId>
		    <version>${version.org.eclipse.jetty.all}</version>
		</dependency>
		
		<dependency>
	        <groupId>org.eclipse.paho</groupId>
	        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
        	<version>1.0.2</version>
        </dependency>
        <dependency>
		    <groupId>io.inventit.dev</groupId>
		    <artifactId>mqtt-websocket-java</artifactId>
		    <version>1.0.1</version>
		</dependency>	
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.8.47</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-api-mockito</artifactId>
		    <version>1.7.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
            <groupId>kg.apc</groupId>
            <artifactId>jmeter-plugins-cmn-jmeter</artifactId>
            <scope>test</scope>
            <version>0.5</version>
        </dependency>

        <dependency>
            <groupId>kg.apc</groupId>
            <artifactId>jmeter-plugins-emulators</artifactId>
            <version>0.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <outputFile>
                        ${project.artifactId}-${project.version}.jar
                    </outputFile>
                </configuration>
            </plugin> 
        </plugins>
    </build>
</project>
